--- a/testing/k8s-binder-k8s-hub/binderhub-chart-config.yaml
+++ b/testing/k8s-binder-k8s-hub/binderhub-chart-config.yaml
@@ -5,7 +5,11 @@ service:
   nodePort: 30901
 
 config:
+  
+  ProxyRepoProvider:
+    api_url: http://10.99.102.148:8000/api/projects
   BinderHub:
+
     # Use the internal host name for Pod to Pod communication
     # We can't use `hub_url` here because that is set to localhost which
     # works on the host but not from within a Pod
@@ -13,6 +17,14 @@ config:
     use_registry: false
     log_level: 10
     cors_allow_origin: '*'
+
+    # custom index page
+    template_path: /etc/binderhub/custom/app/ui/public
+    extra_static_path: /etc/binderhub/custom/app/ui/public
+    extra_static_url_prefix: /extra_static/
+    template_variables:
+        EXTRA_STATIC_URL_PREFIX: "/extra_static/"
+
 
 ingress:
   # Enabled to test the creation/update of the k8s Ingress resource, but not
@@ -52,3 +64,26 @@ jupyterhub:
       type: none
     memory:
       guarantee: null
+
+initContainers:
+  - name: git-clone-templates
+    image: alpine/git
+    args:
+      - clone
+      - --single-branch
+      - --branch=master
+      - --depth=1
+      - --
+      - https://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@github.com/chicago-cdac/opendata.git
+      - /etc/binderhub/custom
+    securityContext:
+      runAsUser: 0
+    volumeMounts:
+      - name: custom-templates
+        mountPath: /etc/binderhub/custom
+extraVolumes:
+  - name: custom-templates
+    emptyDir: {}
+extraVolumeMounts:
+  - name: custom-templates
+    mountPath: /etc/binderhub/custom
